--- a/hsqldb/hsqldb/votingsystemdb.properties
+++ b/hsqldb/hsqldb/votingsystemdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Sat Feb 16 18:12:17 BRST 2019
+#Sun Feb 17 15:13:07 BRT 2019
 version=2.4.1
 modified=yes
 tx_timestamp=0
