--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 logging.file=votingsystem.log
+#spring.jpa.hibernate.ddl-auto=create
