--- a/hsqldb/hsqldb/votingsystemdb.properties
+++ b/hsqldb/hsqldb/votingsystemdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Sun Feb 17 15:13:07 BRT 2019
+#Sun Feb 17 21:37:47 BRT 2019
 version=2.4.1
-modified=yes
+modified=no
 tx_timestamp=0
